tests/baselines/reference/intTypeCheck.errors.txt
==== tests/cases/compiler/intTypeCheck.ts (83 errors) ====
    interface i1 {
        //Property Signatures
        p;
        p1?;
        p2?: string;
        p3();
        p4? ();
        p5? (): void;
        p6(pa1): void;
        p7? (pa1, pa2): void;
    }
    interface i2 {
        //Call Signatures
        ();
        (): number;
        ~~~~~~~~~~
!!! error TS2175: Overloads cannot differ only by return type.
        (p);
        (p1: string);
        (p2?: string);
        (...p3: any[]);
        (p4: string, p5?: string);
        (p6: string, ...p7: any[]);
    }
    interface i3 {
        //Construct Signatures
        new ();
        new (): number;
        ~~~~~~~~~~~~~~
!!! error TS2175: Overloads cannot differ only by return type.
        new (p: string);
        new (p2?: string);
        new (...p3: any[]);
        new (p4: string, p5?: string);
        new (p6: string, ...p7: any[]);
    }
    interface i4 {
        //Index Signatures
        [p];
        [p1: string];
        [p2: string, p3: number];
                   ~
!!! error TS1005: ']' expected.
                               ~
!!! error TS1005: ';' expected.
                                ~
!!! error TS1008: Unexpected token; 'call, construct, index, property or function signature' expected.
        ~~~~~~~~~~~
!!! error TS2232: Duplicate string index signature.
    }
    interface i5 extends i1 { }
    interface i6 extends i2 { }
    interface i7 extends i3 { }
    interface i8 extends i4 { }
    interface i9 { }
    
    class Base { foo() { } }
    
    interface i11 {
        //Call Signatures
        ();
        (): number;
        ~~~~~~~~~~
!!! error TS2175: Overloads cannot differ only by return type.
        (p);
        (p1: string);
        (p2?: string);
        (...p3: any[]);
        (p4: string, p5?: string);
        (p6: string, ...p7: any[]);
        //(p8?: string, ...p9: any[]);
        //(p10:string, p8?: string, ...p9: any[]);
    
        //Construct Signatures
        new ();
        new (): number;
        ~~~~~~~~~~~~~~
!!! error TS2175: Overloads cannot differ only by return type.
        new (p: string);
        new (p2?: string);
        new (...p3: any[]);
        new (p4: string, p5?: string);
        new (p6: string, ...p7: any[]);
    
        //Index Signatures
        [p];
        [p1: string];
        [p2: string, p3: number];
                   ~
!!! error TS1005: ']' expected.
                               ~
!!! error TS1005: ';' expected.
                                ~
!!! error TS1008: Unexpected token; 'call, construct, index, property or function signature' expected.
        ~~~~~~~~~~~
!!! error TS2232: Duplicate string index signature.
    
        //Property Signatures
        p;
        p1?;
        p2?: string;
        p3();
        ~~~~
!!! error TS2000: Duplicate identifier 'p3'.
        p4? ();
        p5? (): void;
        p6(pa1): void;
        p7(pa1, pa2): void;
        p7? (pa1, pa2): void;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2144: Duplicate overload signature for 'p7'.
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2153: Overload signatures must all be optional or required.
    }
    
    var anyVar: any;
    //
    // Property signatures
    //
    var obj0: i1;
    var obj1: i1 = {
        p: null,
        p3: function ():any { return 0; },
        p6: function (pa1):any { return 0; },
        p7: function (pa1, pa2):any { return 0; }
    };
    var obj2: i1 = new Object();
        ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert 'Object' to 'i1':
!!! 	Type 'Object' is missing property 'p' from type 'i1'.
    var obj3: i1 = new obj0;
                       ~~~~
!!! error TS2083: Invalid 'new' expression.
    var obj4: i1 = new Base;
        ~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert 'Base' to 'i1':
!!! 	Type 'Base' is missing property 'p' from type 'i1'.
    var obj5: i1 = null;
    var obj6: i1 = function () { };
        ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert '() => void' to 'i1':
!!! 	Type '() => void' is missing property 'p' from type 'i1'.
    //var obj7: i1 = function foo() { };
    var obj8: i1 = <i1> anyVar;
    var obj9: i1 = new <i1> anyVar;
                       ~
!!! error TS1003: Identifier expected.
        ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert 'boolean' to 'i1':
!!! 	Type 'Boolean' is missing property 'p' from type 'i1'.
                        ~~
!!! error TS2095: Could not find symbol 'i1'.
    var obj10: i1 = new {};
                        ~~
!!! error TS2083: Invalid 'new' expression.
    //
    // Call signatures
    //
    var obj11: i2;
    var obj12: i2 = {};
        ~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert '{}' to 'i2':
!!! 	Type 'i2' requires a call signature, but type '{}' lacks one.
    var obj13: i2 = new Object();
        ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert 'Object' to 'i2':
!!! 	Type 'i2' requires a call signature, but type 'Object' lacks one.
    var obj14: i2 = new obj11;
                        ~~~~~
!!! error TS2084: Call signatures used in a 'new' expression must have a 'void' return type.
    var obj15: i2 = new Base;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert 'Base' to 'i2':
!!! 	Type 'i2' requires a call signature, but type 'Base' lacks one.
    var obj16: i2 = null;
    var obj17: i2 = function ():any { return 0; };
    //var obj18: i2 = function foo() { };
    var obj19: i2 = <i2> anyVar;
    var obj20: i2 = new <i2> anyVar;
                        ~
!!! error TS1003: Identifier expected.
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert 'boolean' to 'i2':
!!! 	Type 'i2' requires a call signature, but type 'Boolean' lacks one.
                         ~~
!!! error TS2095: Could not find symbol 'i2'.
    var obj21: i2 = new {};
                        ~~
!!! error TS2083: Invalid 'new' expression.
    //
    // Construct Signatures
    //
    var obj22: i3;
    var obj23: i3 = {};
        ~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert '{}' to 'i3':
!!! 	Type 'i3' requires a construct signature, but type '{}' lacks one.
    var obj24: i3 = new Object();
        ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert 'Object' to 'i3':
!!! 	Type 'i3' requires a construct signature, but type 'Object' lacks one.
    var obj25: i3 = new obj22;
    var obj26: i3 = new Base;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert 'Base' to 'i3':
!!! 	Type 'i3' requires a construct signature, but type 'Base' lacks one.
    var obj27: i3 = null;
    var obj28: i3 = function () { };
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert '() => void' to 'i3':
!!! 	Type 'i3' requires a construct signature, but type '() => void' lacks one.
    //var obj29: i3 = function foo() { };
    var obj30: i3 = <i3> anyVar;
    var obj31: i3 = new <i3> anyVar;
                        ~
!!! error TS1003: Identifier expected.
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert 'boolean' to 'i3':
!!! 	Type 'i3' requires a construct signature, but type 'Boolean' lacks one.
                         ~~
!!! error TS2095: Could not find symbol 'i3'.
    var obj32: i3 = new {};
                        ~~
!!! error TS2083: Invalid 'new' expression.
    //
    // Index Signatures
    //
    var obj33: i4;
    var obj34: i4 = {};
        ~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert '{ [p1: string]: any; }' to 'i4':
!!! 	Type '{ [p1: string]: any; }' is missing property 'p3' from type 'i4'.
    var obj35: i4 = new Object();
        ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert 'Object' to 'i4':
!!! 	Type 'Object' is missing property 'p3' from type 'i4'.
    var obj36: i4 = new obj33;
                        ~~~~~
!!! error TS2083: Invalid 'new' expression.
    var obj37: i4 = new Base;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert 'Base' to 'i4':
!!! 	Type 'Base' is missing property 'p3' from type 'i4'.
    var obj38: i4 = null;
    var obj39: i4 = function () { };
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert '() => void' to 'i4':
!!! 	Type '() => void' is missing property 'p3' from type 'i4'.
    //var obj40: i4 = function foo() { };
    var obj41: i4 = <i4> anyVar;
    var obj42: i4 = new <i4> anyVar;
                        ~
!!! error TS1003: Identifier expected.
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert 'boolean' to 'i4':
!!! 	Type 'Boolean' is missing property 'p3' from type 'i4'.
                         ~~
!!! error TS2095: Could not find symbol 'i4'.
    var obj43: i4 = new {};
                        ~~
!!! error TS2083: Invalid 'new' expression.
    //
    // Interface Derived I1
    //
    var obj44: i5;
    var obj45: i5 = {};
        ~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert '{}' to 'i5':
!!! 	Type '{}' is missing property 'p' from type 'i5'.
    var obj46: i5 = new Object();
        ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert 'Object' to 'i5':
!!! 	Type 'Object' is missing property 'p' from type 'i5'.
    var obj47: i5 = new obj44;
                        ~~~~~
!!! error TS2083: Invalid 'new' expression.
    var obj48: i5 = new Base;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert 'Base' to 'i5':
!!! 	Type 'Base' is missing property 'p' from type 'i5'.
    var obj49: i5 = null;
    var obj50: i5 = function () { };
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert '() => void' to 'i5':
!!! 	Type '() => void' is missing property 'p' from type 'i5'.
    //var obj51: i5 = function foo() { };
    var obj52: i5 = <i5> anyVar;
    var obj53: i5 = new <i5> anyVar;
                        ~
!!! error TS1003: Identifier expected.
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert 'boolean' to 'i5':
!!! 	Type 'Boolean' is missing property 'p' from type 'i5'.
                         ~~
!!! error TS2095: Could not find symbol 'i5'.
    var obj54: i5 = new {};
                        ~~
!!! error TS2083: Invalid 'new' expression.
    //
    // Interface Derived I2
    //
    var obj55: i6;
    var obj56: i6 = {};
        ~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert '{}' to 'i6':
!!! 	Type 'i6' requires a call signature, but type '{}' lacks one.
    var obj57: i6 = new Object();
        ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert 'Object' to 'i6':
!!! 	Type 'i6' requires a call signature, but type 'Object' lacks one.
    var obj58: i6 = new obj55;
                        ~~~~~
!!! error TS2084: Call signatures used in a 'new' expression must have a 'void' return type.
    var obj59: i6 = new Base;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert 'Base' to 'i6':
!!! 	Type 'i6' requires a call signature, but type 'Base' lacks one.
    var obj60: i6 = null;
    var obj61: i6 = function () { };
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert '() => void' to 'i6':
!!! 	Call signatures of types '() => void' and 'i6' are incompatible.
    //var obj62: i6 = function foo() { };
    var obj63: i6 = <i6> anyVar;
    var obj64: i6 = new <i6> anyVar;
                        ~
!!! error TS1003: Identifier expected.
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert 'boolean' to 'i6':
!!! 	Type 'i6' requires a call signature, but type 'Boolean' lacks one.
                         ~~
!!! error TS2095: Could not find symbol 'i6'.
    var obj65: i6 = new {};
                        ~~
!!! error TS2083: Invalid 'new' expression.
    //
    // Interface Derived I3
    //
    var obj66: i7;
    var obj67: i7 = {};
        ~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert '{}' to 'i7':
!!! 	Type 'i7' requires a construct signature, but type '{}' lacks one.
    var obj68: i7 = new Object();
        ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert 'Object' to 'i7':
!!! 	Type 'i7' requires a construct signature, but type 'Object' lacks one.
    var obj69: i7 = new obj66;
    var obj70: i7 = <i7>new Base;
                    ~~~~~~~~~~~~
!!! error TS2012: Cannot convert 'Base' to 'i7':
!!! 	Type 'i7' requires a construct signature, but type 'Base' lacks one.
!!! 	Type 'i7' is missing property 'foo' from type 'Base'.
    var obj71: i7 = null;
    var obj72: i7 = function () { };
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert '() => void' to 'i7':
!!! 	Type 'i7' requires a construct signature, but type '() => void' lacks one.
    //var obj73: i7 = function foo() { };
    var obj74: i7 = <i7> anyVar;
    var obj75: i7 = new <i7> anyVar;
                        ~
!!! error TS1003: Identifier expected.
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert 'boolean' to 'i7':
!!! 	Type 'i7' requires a construct signature, but type 'Boolean' lacks one.
                         ~~
!!! error TS2095: Could not find symbol 'i7'.
    var obj76: i7 = new {};
                        ~~
!!! error TS2083: Invalid 'new' expression.
    //
    // Interface Derived I4
    //
    var obj77: i8;
    var obj78: i8 = {};
        ~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert '{ [p1: string]: any; }' to 'i8':
!!! 	Type '{ [p1: string]: any; }' is missing property 'p3' from type 'i8'.
    var obj79: i8 = new Object();
        ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert 'Object' to 'i8':
!!! 	Type 'Object' is missing property 'p3' from type 'i8'.
    var obj80: i8 = new obj77;
                        ~~~~~
!!! error TS2083: Invalid 'new' expression.
    var obj81: i8 = new Base;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert 'Base' to 'i8':
!!! 	Type 'Base' is missing property 'p3' from type 'i8'.
    var obj82: i8 = null;
    var obj83: i8 = function () { };
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert '() => void' to 'i8':
!!! 	Type '() => void' is missing property 'p3' from type 'i8'.
    //var obj84: i8 = function foo() { };
    var obj85: i8 = <i8> anyVar;
    var obj86: i8 = new <i8> anyVar;
                        ~
!!! error TS1003: Identifier expected.
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert 'boolean' to 'i8':
!!! 	Type 'Boolean' is missing property 'p3' from type 'i8'.
                         ~~
!!! error TS2095: Could not find symbol 'i8'.
    var obj87: i8 = new {};
                        ~~
!!! error TS2083: Invalid 'new' expression.